--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <% @posts.each do |post| %>
       <div class="posts-index-item">
-        <%= post.content %> <!--コンソールから入力したdbから取り出し-->
+         <%= link_to(post.content, "/posts/#{post.id}") %><!--コンソールから入力したdbから取り出し-->
       </div>
     <% end %>
   </div>
