--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,7 +4,13 @@
     <%= form_tag("/posts/create") do %>
     <div class="form">
       <div class="form-body">
-        <textarea name="content"></textarea>
+          <% @post.errors.full_messages.each do |message| %>
+            <div class="form-error">
+              <%= message %> <!--メッセージ表示-->
+            </div>
+          <% end %>
+
+        <textarea name="content"><%= @post.content %></textarea> <!--@post.contentで直前の内容表示-->
         <input type="submit" value="投稿">
       </div>
     </div>
