--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,9 @@
         <li>
           <%= link_to("ユーザー一覧", "/users/index") %>
         </li>
+        <li>
+          <%= link_to("新規会員登録", "/signup") %>
+        </li>
       </ul>
     </header>
 
